update openapi spec; update web model
